template-01/grid.css
body {
    background-color: rgb(236, 236, 236);
    margin: 4em 0 4em 0;
}

h1 {
    font-family: 'Roboto', sans-serif;
    font-size: 2.5em;
    color: black;
}

p {
    font-family: 'Roboto Slab', serif;
    font-size: 1.2em;
    color: rgb(55, 55, 55);
    font-weight: 300;
}

/* grid - start */
#grid {
    display: grid;
    width: 100%;
    grid-template-columns: 1fr 4fr 1fr;
    column-gap: 2.5em;
}

#areaA {
    background-color: none;
}

#areaB {
    background-color: white;
    padding: 2em 3em 2em 3em;
    box-shadow: 10px 10px 8px #b2b2b2;
}

#areaC {
    background-color: none;
}
/* grid - end */

/* links - start */
a:link {
    color: black;
    font-weight: 400;
}

a:visited {
    color: rgb(55, 55, 55);
    font-weight: 400;
}

a:hover {
    color: darkred;
    text-decoration: no;
}

a:active {
    color: darkred;
}
/* links - end */

/* media queries - start */
@media screen and (max-width: 992px) {
    #grid {
        grid-template-columns: 1fr;
    }
    #areaA {
        visibility: hidden;
    }
    #areaC {
        visibility: hidden;
    }
}

@media print {
    #grid {
        grid-template-columns: 1fr;
        background-color: white;
    }
    #areaA {
        background-color: white;
        visibility: hidden;
    }
    #areaB {
        box-shadow: none;
        background-color: white;
    }  
    #areaC {
        visibility: hidden;
        background-color: white;
    }    
}
/* media queries - end */

